--- a/web/contact.html
+++ b/web/contact.html
@@ -234,7 +234,7 @@ function register() {
 		</div>
 	</nav>
 	
-	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(images/contact.gif)">
+	<header id="gtco-header" class="gtco-cover gtco-cover-sm" role="banner" style="background-image: url(images/contact_bg.gif)">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
@@ -242,7 +242,7 @@ function register() {
 
 					<div class="row row-mt-15em">
 						<div class="col-md-12 mt-text animate-box" data-animate-effect="fadeInUp">
-							<span class="intro-text-small">Hand-crafted by <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>
+							<span class="intro-text-small">ENJOY YOUR MEAL! <a href="http://gettemplates.co" target="_blank">GetTemplates.co</a></span>
 							<h1 class="cursive-font">Contact me anytime!</h1>	
 						
 						</div>
