--- a/web/menu.html
+++ b/web/menu.html
@@ -217,12 +217,12 @@
 		</div>
 	</div>
 
-	<div class="gtco-cover gtco-cover-sm" style="background-image: url(images/img_bg_1.jpg)"  data-stellar-background-ratio="0.5">
+	<div class="gtco-cover gtco-cover-sm" style="background-image: url(images/ceo_bg.jpg)"  data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="gtco-container text-center">
 			<div class="display-t">
 				<div class="display-tc">
-					<h1>&ldquo; Their high quality of service makes me back over and over again!&rdquo;</h1>
+					<h1>&ldquo; Please visit us often and enjoy our food. You won't be able to just imagine.&rdquo;</h1>
 					<p>&mdash; John Doe, CEO of XYZ Co.</p>
 				</div>	
 			</div>
@@ -234,7 +234,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 					<h2 class="cursive-font">Subscribe</h2>
-					<p>Be the first to know about the new templates.</p>
+					<p>Subscribe if you want to know the event in our restaurant first.</p>
 				</div>
 			</div>
 			<div class="row animate-box">
@@ -263,12 +263,12 @@
 				
 
 				
-				<div class="col-md-12 text-center">
+							<div class="col-md-12 text-center">
 					<div class="gtco-widget">
 						<h3>Get In Touch</h3>
 						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-phone"></i> +1 234 567 890</a></li>
-							<li><a href="#"><i class="icon-mail2"></i> info@GetTemplates.co</a></li>
+							<li><a href="#"><i class="icon-phone"></i> +305)10-234-4366</a></li>
+							<li><a href="#"><i class="icon-mail2"></i> shim@foody.com</a></li>
 							<li><a href="#"><i class="icon-chat"></i> Live Chat</a></li>
 						</ul>
 					</div>
