--- a/web/index.html
+++ b/web/index.html
@@ -93,7 +93,7 @@
 		</div>
 	</nav>
 	
-	<header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" style="background-image: url(images/index_bg_4.gif)" data-stellar-background-ratio="0.5">
+	<header id="gtco-header" class="gtco-cover gtco-cover-md" role="banner" style="background-image: url(images/index_bg_5.gif)" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="gtco-container">
 			<div class="row">
@@ -265,7 +265,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2 class="cursive-font">Our Services</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>We provide the following services for our customers' pleasurable and comfortable meal</p>
 				</div>
 			</div>
 			<div class="row">
@@ -275,7 +275,7 @@
 							<i class="ti-face-smile"></i>
 						</span>
 						<h3>Happy People</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<p>Yoon Gyesang will be happy to assist you. Please call us anytime.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6">
@@ -284,7 +284,7 @@
 							<i class="ti-thought"></i>
 						</span>
 						<h3>Creative Culinary</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<p>We make new dishes with the fresh material every week.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-6">
@@ -293,7 +293,7 @@
 							<i class="ti-truck"></i>
 						</span>
 						<h3>Food Delivery</h3>
-						<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+						<p>Bo Gum Park will deliver you the food when you order food using application.</p>
 					</div>
 				</div>
 				
@@ -303,12 +303,12 @@
 	</div>
 
 
-	<div class="gtco-cover gtco-cover-sm" style="background-image: url(images/img_bg_1.jpg)"  data-stellar-background-ratio="0.5">
+	<div class="gtco-cover gtco-cover-sm" style="background-image: url(images/ceo_bg.jpg)"  data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="gtco-container text-center">
 			<div class="display-t">
 				<div class="display-tc">
-					<h1>&ldquo; Their high quality of service makes me back over and over again!&rdquo;</h1>
+					<h1>&ldquo; Please visit us often and enjoy our food. You won't be able to just imagine.&rdquo;</h1>
 					<p>&mdash; John Doe, CEO of XYZ Co.</p>
 				</div>	
 			</div>
@@ -321,7 +321,9 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading animate-box">
 					<h2 class="cursive-font primary-color">Fun Facts</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<p>
+
+It is a proud history of our restaurant. We promise to always offer fresh and delicious food to enjoy our proud with you.</p>
 				</div>
 			</div>
 
@@ -365,7 +367,8 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 					<h2 class="cursive-font">Subscribe</h2>
-					<p>Be the first to know about the new templates.</p>
+					<p>
+Subscribe if you want to know the event in our restaurant first.</p>
 				</div>
 			</div>
 			<div class="row animate-box">
@@ -398,8 +401,8 @@
 					<div class="gtco-widget">
 						<h3>Get In Touch</h3>
 						<ul class="gtco-quick-contact">
-							<li><a href="#"><i class="icon-phone"></i> +1 234 567 890</a></li>
-							<li><a href="#"><i class="icon-mail2"></i> info@GetTemplates.co</a></li>
+							<li><a href="#"><i class="icon-phone"></i> +305)10-234-4366</a></li>
+							<li><a href="#"><i class="icon-mail2"></i> shim@foody.com</a></li>
 							<li><a href="#"><i class="icon-chat"></i> Live Chat</a></li>
 						</ul>
 					</div>
