--- a/web/services.html
+++ b/web/services.html
@@ -194,7 +194,7 @@
    </div>
 
 
-   <div class="gtco-cover gtco-cover-sm" style="background-image: url(images/steak.jpg)"  data-stellar-background-ratio="0.5">
+   <div class="gtco-cover gtco-cover-sm" style="background-image: url(images/ceo_bg.jpg)"  data-stellar-background-ratio="0.5">
 
 
       <div class="overlay"></div>
