--- a/web/index.html
+++ b/web/index.html
@@ -56,7 +56,54 @@
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
+<style>
+#activitiesconf{
+font-size : 9pt;
+}
 
+#dateconf{
+font-size : 9pt;
+}
+#timeconf{
+font-size : 9pt;
+}
+
+</style>
+
+<script>
+function complete(){
+	alert('Compelete!');
+};
+function reservation(){
+	activitiesconf.innerHTML="";
+	dateconf.innerHTML="";
+	timeconf.innerHTML ="";
+	var form = rf;	
+	var rperson = form.activities.options[form.activities.selectedIndex].text;
+	var rdate = form.date.value;
+	var rtime = form.time.value;
+	var check = true;
+	//alert(rperson);
+	if(rperson == "Persons" || rperson == null || rperson == ''){
+		activitiesconf.innerHTML = "Please select the number of peaple.";
+		check = false;
+	};
+	if(rdate == null || rdate==''){
+		dateconf.innerHTML = "Please select a date.";
+		check = false;
+	};
+	if(rtime == null || rtime==''){
+		timeconf.innerHTML = "Please select a time.";
+		check = false;
+	}; 
+	if(check==false){
+		return ;
+	};
+	
+	complete();
+};
+</script>
+		
 	</head>
 	<body>
 		
@@ -112,7 +159,7 @@
 									<div class="tab-content">
 										<div class="tab-content-inner active" data-content="signup">
 											<h3 class="cursive-font">Table Reservation</h3>
-											<form action="#">
+											<form action="#" id="rf">
 												<div class="row form-group">
 													<div class="col-md-12">
 														<label for="activities">Persons</label>
@@ -124,18 +171,21 @@
 															<option value="">4</option>
 															<option value="">5+</option>
 														</select>
+														<label id="activitiesconf"></label>
 													</div>
 												</div>
 												<div class="row form-group">
 													<div class="col-md-12">
 														<label for="date-start">Date</label>
 														<input type="text" id="date" class="form-control">
+														<label id="dateconf" ></label>
 													</div>
 												</div>
 												<div class="row form-group">
 													<div class="col-md-12">
 														<label for="date-start">Time</label>
 														<input type="text" id="time" class="form-control">
+														<label id="timeconf"></label>
 													</div>
 												</div>
 
@@ -173,85 +223,84 @@
 			<div class="row">
 
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/img_1.jpg" class="fh5co-card-item image-popup">
+					<a href="images/food_1.jpg" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/img_1.jpg" alt="Image" class="img-responsive">
+							<img src="images/food_1.jpg" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
-							<h2>Fresh Mushrooms</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$19.15</span></p>
+							<h2>비빔밥(BIBIMBAP)</h2>
+							<p>Bibimbap simply translates to “mixed rice with meat and assorted vegetables." This is beloved Korean dishes to many people. </p>
+							<p><span class="price cursive-font">$14.99</span></p>
+						</div>
+					</a>
+				</div>
+				<div class="col-lg-4 col-md-4 col-sm-6"  >
+					<a href="images/food_2.jpg" class="fh5co-card-item image-popup">
+						<figure>
+							<div class="overlay"><i class="ti-plus"></i></div>
+							<img src="images/food_2.jpg" alt="Image" class="img-responsive">
+						</figure>
+						<div class="fh5co-text">
+							<h2>잡채(JAPCHAE)</h2>
+							<p>Japchae translates as mixed vegetables. When it was first invented in the 17th century, japchae was a noodle-less dish.</p>
+							<p><span class="price cursive-font">$11.39</span></p>
 						</div>
 					</a>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/img_2.jpg" class="fh5co-card-item image-popup">
+					<a href="images/food_3.jpg" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/img_2.jpg" alt="Image" class="img-responsive">
+							<img src="images/food_3.jpg" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
-							<h2>Cheese and Garlic Toast</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$20.99</span></p>
-						</div>
-					</a>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/img_3.jpg" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/img_3.jpg" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Grilled Chiken Salad</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$8.99</span></p>
-
+							<h2>갈비찜(GALBI JJIM)</h2>
+							<p>Galbijjim is generally made with beef or pork short ribs. It is typically served during the festive. </p>
+							<p><span class="price cursive-font">$32.80</span></p>
 						</div>
 					</a>
 				</div>
 
 
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/img_4.jpg" class="fh5co-card-item image-popup">
+					<a href="images/food_4.jpg" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/img_4.jpg" alt="Image" class="img-responsive">
+							<img src="images/food_4.jpg" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
-							<h2>Organic Egg</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$12.99</span></p>
-						</div>
-					</a>
-				</div>
-
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/img_5.jpg" class="fh5co-card-item image-popup">
-						<figure>
-							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/img_5.jpg" alt="Image" class="img-responsive">
-						</figure>
-						<div class="fh5co-text">
-							<h2>Tomato Soup with Chicken</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$23.10</span></p>
+							<h2>구절판(GUJEOLPAN)</h2>
+							<p> “Gu” means number 9, “jeol” sectioned, and “pan” a tray or a platter. It’s well worth the effort for this beautiful and healthy dish!</p>
+							<p><span class="price cursive-font">$54.99</span></p>
 						</div>
 					</a>
 				</div>
 
 				<div class="col-lg-4 col-md-4 col-sm-6">
-					<a href="images/img_6.jpg" class="fh5co-card-item image-popup">
+					<a href="images/food_5.jpg" class="fh5co-card-item image-popup">
 						<figure>
 							<div class="overlay"><i class="ti-plus"></i></div>
-							<img src="images/img_6.jpg" alt="Image" class="img-responsive">
+							<img src="images/food_5.jpg" alt="Image" class="img-responsive">
 						</figure>
 						<div class="fh5co-text">
-							<h2>Salad with Crispy Chicken</h2>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia..</p>
-							<p><span class="price cursive-font">$5.59</span></p>
+							<h2>떡갈비(TTEOK GALBI)</h2>
+							<p>Tteok-galbi or grilled short rib patties is a Korean beef dish made with minced beef short ribs.</p>
+							<p><span class="price cursive-font">$21.10</span></p>
+						</div>
+					</a>
+				</div>
+
+				<div class="col-lg-4 col-md-4 col-sm-6">
+					<a href="images/food_6.jpg" class="fh5co-card-item image-popup" >
+						<figure>
+							<div class="overlay"><i class="ti-plus"></i></div>
+							<img src="images/food_6.jpg" alt="Image" class="img-responsive">
+						</figure>
+						<div class="fh5co-text">
+							<h2>두부김치(DUBU KIMCHI)</h2>
+							<p>This consists of tofu and stir-fried kimchi. Soft, warm, blanched tofu is served with kimchi stir-fried with pork.</p>
+							<p><span class="price cursive-font">$14.59</span></p>
 						</div>
 					</a>
 				</div>
